@@ -279,10 +279,10 @@
         <!-- Text report empty lines enabled -->
         <prop name="textReportEmptyLinesEnabled" type="String" value="0"/>
 		<!-- X5 receipt template -->
-		<prop name="ReceiptTemplateEnabled" type="String" value="0"/>
+		<prop name="ReceiptTemplateEnabled" type="String" value="1"/>
 		<prop name="FieldSeparator" type="String" value="\\n"/>
 		<prop name="ItemTableHeader" type="String" value="------------------------------------------\n №                  Цена со  Кол-\nпп  Цена     Скидка скидкой  во    ИТОГО\n------------------------------------------"/>
-		<prop name="ItemRowFormat" type="String" value="%3cPOS% %38lTITLE%\n    %8lPRICE% %6lDISCOUNT% %8lSUM%*%3QUAN%%=$10TOTAL_TAX%"/>
+		<prop name="ItemRowFormat" type="String" value="%3cPOS% %38lTITLE%\n    %8lPRICE% %6lDISCOUNT% %8lSUM%*%3QUAN%%=$10TOTAL_TAX%  "/>
 		
 		<prop name="nonFiscalHeaderEnabled" type="String" value="1"/>
     </JposEntry> 
